--- a/index.html
+++ b/index.html
@@ -3,154 +3,399 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+
   <title>TIMBRIC — Moduļu pirtis no koka</title>
-  <link rel="stylesheet" href="style.css" />
   <meta name="description" content="TIMBRIC ražo moduļu pirtis un timber konstrukcijas Latvijā. Piegāde un montāža. Piemērots eksportam." />
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://timbric.lv/" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="TIMBRIC — Moduļu pirtis no koka" />
+  <meta property="og:description" content="Ražots Latvijā. Piegāde un montāža. Piemērots eksportam." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://timbric.lv/" />
+  <meta property="og:image" content="https://timbric.lv/img/og.jpg" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
+  <header class="header">
+    <div class="container nav">
+      <a class="logo" href="#top" aria-label="TIMBRIC">TIMBRIC</a>
 
-<header class="header">
-  <div class="container nav">
-    <div class="logo">TIMBRIC</div>
-    <nav class="menu">
-      <a href="#produkti">Produkti</a>
-      <a href="#modelis">3×6 Modelis</a>
-      <a href="#process">Process</a>
-      <a href="#galerija">Galerija</a>
-      <a class="btn" href="#kontakti">Saņemt piedāvājumu</a>
-    </nav>
-  </div>
-</header>
-
-<main>
-  <!-- HERO -->
-  <section class="hero">
-    <div class="container hero-grid">
-      <div>
-        <h1>Moduļu pirtis no koka. Ražots Latvijā.</h1>
-        <p>Kvalitatīvas, gatavas pirtis privātmājām un atpūtai. Piegāde un montāža Latvijā un eksportam.</p>
-        <div class="cta">
-          <a class="btn" href="#kontakti">Saņemt piedāvājumu</a>
-          <a class="btn secondary" href="#galerija">Apskatīt piemērus</a>
-        </div>
-        <ul class="bullets">
-          <li>3×6 populārais formāts</li>
-          <li>Pielāgojamas telpas un apdare</li>
-          <li>Piemērots Skandināvijai</li>
-        </ul>
-      </div>
-      <div class="hero-card">
-        <div class="placeholder">Hero bilde (img/hero.jpg)</div>
-      </div>
+      <nav class="menu" aria-label="Galvenā navigācija">
+        <a href="#produkti">Produkti</a>
+        <a href="#modelis">3×6</a>
+        <a href="#spec">Specifikācija</a>
+        <a href="#process">Process</a>
+        <a href="#faq">FAQ</a>
+        <a class="btn" href="#kontakti">Saņemt piedāvājumu</a>
+      </nav>
     </div>
-  </section>
+  </header>
 
-  <!-- PRODUKTI -->
-  <section id="produkti" class="section">
-    <div class="container">
-      <h2>Ko mēs ražojam</h2>
-      <div class="cards">
-        <article class="card">
-          <h3>Moduļu pirtis</h3>
-          <p>Gatavi risinājumi 3×6 un citi izmēri. Plānojums pēc vajadzības.</p>
-        </article>
-        <article class="card">
-          <h3>Timber konstrukcijas</h3>
-          <p>Karkasi, konstrukcijas un koka risinājumi privātām un B2B vajadzībām.</p>
-        </article>
-        <article class="card">
-          <h3>Piegāde un montāža</h3>
-          <p>Piegāde, uzstādīšana un konsultācija — no idejas līdz gatavam objektam.</p>
-        </article>
-      </div>
-    </div>
-  </section>
-
-  <!-- MODELIS -->
-  <section id="modelis" class="section alt">
-    <div class="container">
-      <h2>Populārais modelis: 3×6</h2>
-      <div class="two-col">
+  <main id="top">
+    <!-- HERO -->
+    <section class="hero">
+      <div class="container hero-grid">
         <div>
-          <ul class="spec">
-            <li><b>Izmērs:</b> 3×6 m</li>
-            <li><b>Telpas:</b> tvaika telpa + atpūtas telpa</li>
-            <li><b>Opcijas:</b> duša, logs, terase, ārējā krāsns u.c.</li>
-            <li><b>Materiāli:</b> koks, siltinājums, apdare pēc izvēles</li>
+          <p class="kicker">Ražots Latvijā • Moduļu pirtis • Timber konstrukcijas</p>
+          <h1>Moduļu pirtis no koka. Gatavas uzstādīšanai.</h1>
+          <p>
+            Ražojam kvalitatīvas, siltinātas pirtis privātmājām un atpūtai.
+            Nodrošinām piegādi un montāžu Latvijā un eksportam (Somija / Zviedrija).
+          </p>
+
+          <div class="cta">
+            <a class="btn" href="#kontakti">Saņemt cenu & termiņu</a>
+            <a class="btn secondary" href="#galerija">Skatīt galeriju</a>
+          </div>
+
+          <ul class="bullets">
+            <li>Populārais formāts: <b>3×6 m</b> (pielāgojams)</li>
+            <li>Plānojums: tvaika telpa + atpūta (+ duša pēc izvēles)</li>
+            <li>Projektēts loģistikai un uzstādīšanai</li>
           </ul>
-          <a class="btn" href="#kontakti">Pieprasīt cenu</a>
+
+          <div class="trust">
+            <div class="trust-item">
+              <div class="trust-num">⚡</div>
+              <div>
+                <div class="trust-title">Ātra realizācija</div>
+                <div class="trust-text">No specifikācijas līdz gatavai pirtij.</div>
+              </div>
+            </div>
+            <div class="trust-item">
+              <div class="trust-num">🪵</div>
+              <div>
+                <div class="trust-title">Koks + kvalitāte</div>
+                <div class="trust-text">Piemērots Latvijas un Skandināvijas klimatam.</div>
+              </div>
+            </div>
+            <div class="trust-item">
+              <div class="trust-num">🚚</div>
+              <div>
+                <div class="trust-title">Piegāde & montāža</div>
+                <div class="trust-text">Atvedam, uzstādam, nododam.</div>
+              </div>
+            </div>
+          </div>
         </div>
+
         <div class="hero-card">
-          <div class="placeholder">Produkta bilde (img/sauna1.jpg)</div>
+          <!-- Ja nav bilžu, atstāj placeholder.
+               Kad būs bilde, nomaini uz: <img class="hero-img" src="img/hero.jpg" alt="TIMBRIC moduļu pirts ziemā" /> -->
+          <div class="placeholder">Hero bilde (img/hero.jpg)</div>
+
+          <div class="hero-badges">
+            <span class="badge">3×6 bestseller</span>
+            <span class="badge">Eksportam gatavs</span>
+            <span class="badge">Pielāgojams</span>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- KĀPĒC -->
-  <section class="section">
-    <div class="container">
-      <h2>Kāpēc TIMBRIC</h2>
-      <div class="cards">
-        <article class="card"><h3>Ražots Latvijā 🇱🇻</h3><p>Kvalitāte un kontrole ražošanas procesā.</p></article>
-        <article class="card"><h3>Paredzēts eksportam</h3><p>Pielāgojams prasībām un loģistikai.</p></article>
-        <article class="card"><h3>Elastīgi risinājumi</h3><p>B2C un B2B — no standarta līdz individuālam.</p></article>
-      </div>
-    </div>
-  </section>
+    <!-- PRODUKTI -->
+    <section id="produkti" class="section">
+      <div class="container">
+        <h2>Ko mēs ražojam</h2>
+        <p class="lead">Skaidri, praktiski un ar fokusu uz gala rezultātu.</p>
 
-  <!-- PROCESS -->
-  <section id="process" class="section alt">
-    <div class="container">
-      <h2>Kā tas notiek</h2>
-      <ol class="steps">
-        <li><b>Pieprasījums</b> — izmērs, plānojums, piegādes vieta.</li>
-        <li><b>Saskaņošana</b> — specifikācija, termiņš, cena.</li>
-        <li><b>Ražošana</b> — sagatavošana un montāža darbnīcā.</li>
-        <li><b>Piegāde / uzstādīšana</b> — atvedam un uzstādām.</li>
-      </ol>
-    </div>
-  </section>
+        <div class="cards">
+          <article class="card">
+            <h3>Moduļu pirtis</h3>
+            <p>Standarta modeļi un pielāgoti risinājumi. Ideāli privātmājām, viesu namiem, kempingiem.</p>
+            <ul class="mini">
+              <li>3×6, 2.4×6, citi izmēri</li>
+              <li>Opcijas: duša, terase, logi, apdare</li>
+              <li>Elektriskā vai malkas krāsns (pēc izvēles)</li>
+            </ul>
+          </article>
 
-  <!-- GALERIJA -->
-  <section id="galerija" class="section">
-    <div class="container">
-      <h2>Galerija</h2>
-      <div class="gallery">
-        <div class="ph">img/sauna1.jpg</div>
-        <div class="ph">img/sauna2.jpg</div>
-        <div class="ph">img/production.jpg</div>
-      </div>
-    </div>
-  </section>
+          <article class="card">
+            <h3>Timber konstrukcijas</h3>
+            <p>Karkasi un koka konstrukcijas B2B/B2C projektiem.</p>
+            <ul class="mini">
+              <li>Koka karkasi</li>
+              <li>Ārsienu/iekšsienu risinājumi</li>
+              <li>Moduļu pieeja ražošanai</li>
+            </ul>
+          </article>
 
-  <!-- KONTAKTI -->
-  <section id="kontakti" class="section alt">
-    <div class="container">
-      <h2>Saņemt piedāvājumu</h2>
-      <p>Atstāj kontaktus, un mēs sazināsimies par izmēru, komplektāciju un termiņiem.</p>
-
-      <!-- Sākumā var būt vienkārši mailto, vēlāk ieliksim Netlify formu -->
-      <div class="contact">
-        <a class="btn" href="mailto:info@timbric.lv?subject=TIMBRIC%20piedāvājums">Rakstīt e-pastu</a>
-        <div class="small">
-          <div><b>E-pasts:</b> info@timbric.lv</div>
-          <div><b>Tālrunis:</b> +371 XXXXXXXX</div>
+          <article class="card">
+            <h3>Piegāde & montāža</h3>
+            <p>Pārņemam procesu līdz nodošanai: sagatavošana, loģistika, uzstādīšana.</p>
+            <ul class="mini">
+              <li>Latvija + eksports</li>
+              <li>Montāža uz vietas</li>
+              <li>Konsultācijas pirms pasūtījuma</li>
+            </ul>
+          </article>
         </div>
       </div>
+    </section>
+
+    <!-- MODELIS -->
+    <section id="modelis" class="section alt">
+      <div class="container">
+        <div class="section-head">
+          <h2>Populārais modelis: 3×6</h2>
+          <a class="btn small" href="#kontakti">Pieprasīt piedāvājumu</a>
+        </div>
+
+        <div class="two-col">
+          <div>
+            <p class="lead">
+              Optimāls izmērs pirmajai pirtij: ērti 2–6 cilvēkiem, saprotama loģistika un uzstādīšana.
+            </p>
+
+            <ul class="spec">
+              <li><b>Izmērs:</b> 3×6 m</li>
+              <li><b>Plānojums:</b> tvaika telpa + atpūtas telpa</li>
+              <li><b>Opcijas:</b> duša, logs, terase, papildus siltinājums, krāsns risinājumi</li>
+              <li><b>Pielāgošana:</b> apdare, plaukti, durvis, logu izvietojums</li>
+            </ul>
+
+            <div class="callout">
+              <div class="callout-title">Svarīgi</div>
+              <div class="callout-text">
+                Ja mērķis ir eksports, jau sākumā pielāgojam komplektāciju un materiālus konkrētajam tirgum.
+              </div>
+            </div>
+          </div>
+
+          <div class="hero-card">
+            <div class="placeholder">Produkta bilde (img/sauna1.jpg)</div>
+            <div class="subnote">Pievieno 2–3 reālas bildes, un lapa uzreiz izskatīsies “dārga”.</div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SPEC -->
+    <section id="spec" class="section">
+      <div class="container">
+        <h2>Specifikācija (piemērs)</h2>
+        <p class="lead">Šī ir bāzes specifikācija — to pielāgojam pēc vajadzībām.</p>
+
+        <div class="grid-2">
+          <div class="card">
+            <h3>Konstrukcija</h3>
+            <ul class="mini">
+              <li>Koka karkass (timber)</li>
+              <li>Siltinājums atbilstoši sezonai</li>
+              <li>Apdare: iekšā/ārā pēc izvēles</li>
+              <li>Ventilācija un tvaika izolācija</li>
+            </ul>
+          </div>
+
+          <div class="card">
+            <h3>Komplektācija</h3>
+            <ul class="mini">
+              <li>Saunas plaukti + apgaismojums</li>
+              <li>Durvis/logi (izmēri pēc izvēles)</li>
+              <li>Elektroinstalācija (ja vajag)</li>
+              <li>Krāsns risinājums (elektr./malka)</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="note">
+          <b>Padoms:</b> ja vēl nav bilžu, ieliec 3 renderus vai 3 “reālistiskus” foto no ražošanas/uzstādīšanas.
+        </div>
+      </div>
+    </section>
+
+    <!-- WHY -->
+    <section class="section alt">
+      <div class="container">
+        <h2>Kāpēc TIMBRIC</h2>
+
+        <div class="cards">
+          <article class="card">
+            <h3>Ražots Latvijā 🇱🇻</h3>
+            <p>Kvalitāte un kontrole ražošanas procesā. Mazāk kompromisu, vairāk rezultāta.</p>
+          </article>
+          <article class="card">
+            <h3>Projektēts eksportam</h3>
+            <p>Pielāgojam komplektāciju, siltinājumu un apdari konkrētam tirgum un klimatam.</p>
+          </article>
+          <article class="card">
+            <h3>Elastīgi risinājumi</h3>
+            <p>B2C un B2B — no standarta līdz individuālam projektam.</p>
+          </article>
+        </div>
+
+        <div class="banner">
+          <div>
+            <div class="banner-title">Vēlies ātru cenu?</div>
+            <div class="banner-text">Atstāj kontaktus un plānojumu (3×6 vai cits) — atbildēsim ar cenu un termiņu.</div>
+          </div>
+          <a class="btn" href="#kontakti">Saņemt piedāvājumu</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- PROCESS -->
+    <section id="process" class="section">
+      <div class="container">
+        <h2>Kā tas notiek</h2>
+        <p class="lead">Vienkāršs, saprotams process no pieprasījuma līdz nodošanai.</p>
+
+        <ol class="steps">
+          <li><b>Pieprasījums</b> — izmērs, plānojums, komplektācija, piegādes vieta.</li>
+          <li><b>Saskaņošana</b> — specifikācija, termiņš, cena, līgums.</li>
+          <li><b>Ražošana</b> — sagatavošana un montāža darbnīcā.</li>
+          <li><b>Piegāde / uzstādīšana</b> — atvedam, uzstādam, nododam.</li>
+        </ol>
+      </div>
+    </section>
+
+    <!-- GALLERY -->
+    <section id="galerija" class="section alt">
+      <div class="container">
+        <div class="section-head">
+          <h2>Galerija</h2>
+          <div class="muted">Pievieno īstās bildes → uzticamība x10</div>
+        </div>
+
+        <div class="gallery">
+          <div class="ph">img/sauna1.jpg</div>
+          <div class="ph">img/sauna2.jpg</div>
+          <div class="ph">img/production.jpg</div>
+        </div>
+      </div>
+    </section>
+
+    <!-- FAQ -->
+    <section id="faq" class="section">
+      <div class="container">
+        <h2>FAQ</h2>
+        <div class="faq">
+          <details class="faq-item">
+            <summary>Cik ilgi aizņem izgatavošana?</summary>
+            <div class="faq-body">Atkarīgs no komplektācijas un noslodzes. Atsūti pieprasījumu — iedosim termiņu konkrētam modelim.</div>
+          </details>
+
+          <details class="faq-item">
+            <summary>Vai var pielāgot plānojumu un apdari?</summary>
+            <div class="faq-body">Jā. Var mainīt telpu zonējumu, logus, apdari, plauktus, terasi un citas detaļas.</div>
+          </details>
+
+          <details class="faq-item">
+            <summary>Vai jūs piegādājat uz Somiju/Zviedriju?</summary>
+            <div class="faq-body">Jā — komplektējam eksportam, sagatavojam loģistikai un varam nodrošināt montāžas organizēšanu.</div>
+          </details>
+
+          <details class="faq-item">
+            <summary>Kā saņemt cenu?</summary>
+            <div class="faq-body">Aizpildi formu zemāk (izmērs, plānojums, piegādes vieta). Atbildēsim ar cenu un termiņu.</div>
+          </details>
+        </div>
+      </div>
+    </section>
+
+    <!-- CONTACTS -->
+    <section id="kontakti" class="section alt">
+      <div class="container">
+        <h2>Saņemt piedāvājumu</h2>
+        <p class="lead">Atstāj kontaktus — sazināsimies ar cenu un termiņu.</p>
+
+        <!-- Netlify forma (strādās bez backend, kad būs deploy uz Netlify) -->
+        <form class="form" name="piedavajums" method="POST" data-netlify="true" netlify-honeypot="bot-field">
+          <input type="hidden" name="form-name" value="piedavajums" />
+          <p class="hidden">
+            <label>Don’t fill this out: <input name="bot-field" /></label>
+          </p>
+
+          <div class="grid-2">
+            <label>
+              Vārds / uzņēmums
+              <input name="name" type="text" placeholder="Piem., Andris / SIA ..." required />
+            </label>
+
+            <label>
+              Telefons vai e-pasts
+              <input name="contact" type="text" placeholder="+371... / epasts@..." required />
+            </label>
+          </div>
+
+          <div class="grid-2">
+            <label>
+              Interesē modelis
+              <select name="model">
+                <option>3×6</option>
+                <option>2.4×6</option>
+                <option>Cits izmērs</option>
+              </select>
+            </label>
+
+            <label>
+              Piegādes valsts
+              <select name="country">
+                <option>Latvija</option>
+                <option>Somija</option>
+                <option>Zviedrija</option>
+                <option>Cita</option>
+              </select>
+            </label>
+          </div>
+
+          <label>
+            Ziņa (plānojums / vēlmes)
+            <textarea name="message" rows="5" placeholder="Piem.: 3×6, ar dušu, logs 1×1, piegāde uz ..." required></textarea>
+          </label>
+
+          <div class="form-actions">
+            <button class="btn" type="submit">Nosūtīt pieprasījumu</button>
+            <div class="small muted">
+              Vai raksti uz: <a href="mailto:info@timbric.lv">info@timbric.lv</a> • Tālrunis: <span>+371 XXXXXXXX</span>
+            </div>
+          </div>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="container footer-grid">
+      <div>
+        <div class="logo small">TIMBRIC</div>
+        <div class="muted">Moduļu pirtis no koka • Ražots Latvijā</div>
+      </div>
+      <div class="footer-links">
+        <a href="#produkti">Produkti</a>
+        <a href="#process">Process</a>
+        <a href="#kontakti">Kontakti</a>
+      </div>
+      <div class="muted">© <span id="y"></span> TIMBRIC</div>
     </div>
-  </section>
-</main>
+  </footer>
 
-<footer class="footer">
-  <div class="container">
-    <div>© <span id="y"></span> TIMBRIC</div>
-  </div>
-</footer>
+  <script>
+    document.getElementById("y").textContent = new Date().getFullYear();
+  </script>
 
-<script>
-  document.getElementById("y").textContent = new Date().getFullYear();
-</script>
+  <!-- Schema.org (pamata SEO) -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Organization",
+    "name":"TIMBRIC",
+    "url":"https://timbric.lv/",
+    "email":"info@timbric.lv",
+    "telephone":"+371XXXXXXXX",
+    "address":{
+      "@type":"PostalAddress",
+      "addressCountry":"LV"
+    }
+  }
+  </script>
 </body>
 </html>
