Add stylesheet link to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <title>TIMBRIC — Moduļu pirtis no koka</title>
   <meta name="description" content="TIMBRIC ražo moduļu pirtis un timber konstrukcijas Latvijā. Piegāde un montāža. Piemērots eksportam." />
-
+<link rel="stylesheet" href="style.css">
   <!-- Canonical -->
   <link rel="canonical" href="https://timbric.lv/" />
 
