--- a/index.html
+++ b/index.html
@@ -422,5 +422,42 @@
     }
   }
   </script>
+  <script>
+    const burger = document.querySelector(".burger");
+    const drawer = document.getElementById("mobileMenu");
+    const backdrop = document.getElementById("drawerBackdrop");
+    const closeBtn = document.querySelector(".drawer-close");
+    const drawerLinks = drawer.querySelectorAll("a[href^='#']");
+
+    function openDrawer() {
+      drawer.classList.add("open");
+      backdrop.hidden = false;
+      drawer.setAttribute("aria-hidden", "false");
+      burger.setAttribute("aria-expanded", "true");
+      document.body.style.overflow = "hidden";
+    }
+
+    function closeDrawer() {
+      drawer.classList.remove("open");
+      backdrop.hidden = true;
+      drawer.setAttribute("aria-hidden", "true");
+      burger.setAttribute("aria-expanded", "false");
+      document.body.style.overflow = "";
+    }
+
+    burger.addEventListener("click", openDrawer);
+    closeBtn.addEventListener("click", closeDrawer);
+    backdrop.addEventListener("click", closeDrawer);
+
+    drawerLinks.forEach(link => {
+      link.addEventListener("click", closeDrawer);
+    });
+
+    document.addEventListener("keydown", e => {
+      if (e.key === "Escape") closeDrawer();
+    });
+  </script>
+
 </body>
 </html>
+
