--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
   <main id="top">
     <!-- HERO -->
     <section class="hero">
+      <div class="hero-brand">
+    <span class="hero-logo">TIMBRIC</span>
+    <span class="hero-tagline">MODUĻU PIRTS NO KOKA</span>
+  </div>
       <div class="container hero-grid">
         <div>
           <p class="kicker">Ražots Latvijā • Moduļu pirtis • Timber konstrukcijas</p>
