--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 <body>
   <header class="header">
     <div class="container nav">
-      <a class="logo" href="#top" aria-label="TIMBRIC">TIMBRIC</a>
+      <a class="logo" href="#top" aria-label="TIMBRIC">
+  <img src="img/timbric-logo-black.svg" alt="TIMBRIC" class="logo-svg">
+      </a>
       
 <!-- HAMBURGER POGA (mobile only) -->
       
