--- a/index.html
+++ b/index.html
@@ -121,7 +121,15 @@
         <div class="hero-card">
           <!-- Ja nav bilžu, atstāj placeholder.
                Kad būs bilde, nomaini uz: <img class="hero-img" src="img/hero.jpg" alt="TIMBRIC moduļu pirts ziemā" /> -->
-          <div class="placeholder">Hero bilde (img/hero.jpg)</div>
+          <div class="hero-card">
+  <img class="hero-img" src="img/hero.jpg" alt="TIMBRIC moduļu pirts 3×6 vasarā" />
+
+  <div class="hero-badges">
+    <span class="badge">3×6 bestseller</span>
+    <span class="badge">Eksportam gatavs</span>
+    <span class="badge">Pielāgojams</span>
+  </div>
+</div>
 
           <div class="hero-badges">
             <span class="badge">3×6 bestseller</span>
