Update hero image source to original version

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <!-- Ja nav bilžu, atstāj placeholder.
                Kad būs bilde, nomaini uz: <img class="hero-img" src="img/hero.jpg" alt="TIMBRIC moduļu pirts ziemā" /> -->
           <div class="hero-card">
-  <img class="hero-img" src="img/hero.jpg" alt="TIMBRIC moduļu pirts 3×6 vasarā" />
+  <img class="hero-img" src="img/hero_orig.jpg" alt="TIMBRIC moduļu pirts 3×6 vasarā" />
 
   <div class="hero-badges">
     <span class="badge">3×6 bestseller</span>
