--- a/index.html
+++ b/index.html
@@ -73,50 +73,56 @@
     <span class="hero-logo">TIMBRIC</span>
     <span class="hero-tagline">MODUĻU PIRTS NO KOKA</span>
   </div></div> -->
-      <div class="container hero-grid">
+      <section class="hero" id="top">
+  <div class="hero-overlay"></div>
+
+  <div class="container hero-content">
+    <p class="kicker">Ražots Latvijā • Moduļu pirtis • Timber konstrukcijas</p>
+    <h1>Moduļu pirtis no koka. Gatavas uzstādīšanai.</h1>
+
+    <p>
+      Ražojam kvalitatīvas, siltinātas pirtis privātmājām un atpūtai.
+      Nodrošinām piegādi un montāžu Latvijā un eksportam (Somija / Zviedrija).
+    </p>
+
+    <div class="cta">
+      <a class="btn" href="#kontakti">Saņemt cenu & termiņu</a>
+      <a class="btn secondary" href="#galerija">Skatīt galeriju</a>
+    </div>
+
+    <ul class="bullets">
+      <li>Populārais formāts: <b>3×6 m</b> (pielāgojams)</li>
+      <li>Plānojums: tvaika telpa + atpūta (+ duša pēc izvēles)</li>
+      <li>Projektēts loģistikai un uzstādīšanai</li>
+    </ul>
+
+    <div class="trust">
+      <div class="trust-item">
+        <div class="trust-num">⚡</div>
         <div>
-          <p class="kicker">Ražots Latvijā • Moduļu pirtis • Timber konstrukcijas</p>
-          <h1>Moduļu pirtis no koka. Gatavas uzstādīšanai.</h1>
-          <p>
-            Ražojam kvalitatīvas, siltinātas pirtis privātmājām un atpūtai.
-            Nodrošinām piegādi un montāžu Latvijā un eksportam (Somija / Zviedrija).
-          </p>
-
-          <div class="cta">
-            <a class="btn" href="#kontakti">Saņemt cenu & termiņu</a>
-            <a class="btn secondary" href="#galerija">Skatīt galeriju</a>
-          </div>
-
-          <ul class="bullets">
-            <li>Populārais formāts: <b>3×6 m</b> (pielāgojams)</li>
-            <li>Plānojums: tvaika telpa + atpūta (+ duša pēc izvēles)</li>
-            <li>Projektēts loģistikai un uzstādīšanai</li>
-          </ul>
-
-          <div class="trust">
-            <div class="trust-item">
-              <div class="trust-num">⚡</div>
-              <div>
-                <div class="trust-title">Ātra realizācija</div>
-                <div class="trust-text">No specifikācijas līdz gatavai pirtij.</div>
-              </div>
-            </div>
-            <div class="trust-item">
-              <div class="trust-num">🪵</div>
-              <div>
-                <div class="trust-title">Koks + kvalitāte</div>
-                <div class="trust-text">Piemērots Latvijas un Skandināvijas klimatam.</div>
-              </div>
-            </div>
-            <div class="trust-item">
-              <div class="trust-num">🚚</div>
-              <div>
-                <div class="trust-title">Piegāde & montāža</div>
-                <div class="trust-text">Atvedam, uzstādam, nododam.</div>
-              </div>
-            </div>
-          </div>
+          <div class="trust-title">Ātra realizācija</div>
+          <div class="trust-text">No specifikācijas līdz gatavai pirtij.</div>
         </div>
+      </div>
+
+      <div class="trust-item">
+        <div class="trust-num">🪵</div>
+        <div>
+          <div class="trust-title">Koks + kvalitāte</div>
+          <div class="trust-text">Piemērots Latvijas un Skandināvijas klimatam.</div>
+        </div>
+      </div>
+
+      <div class="trust-item">
+        <div class="trust-num">🚚</div>
+        <div>
+          <div class="trust-title">Piegāde & montāža</div>
+          <div class="trust-text">Atvedam, uzstādam, nododam.</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
         <div class="hero-card">
           <!-- Ja nav bilžu, atstāj placeholder.
