Replace logo image with new SVG file

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <header class="header">
     <div class="container nav">
       <a class="logo" href="#top" aria-label="TIMBRIC">
-  <img src="img/hero2_orig.png" alt="TIMBRIC" class="logo-svg">
+  <img src="img/timbric-lockup-black.svg" alt="TIMBRIC" class="logo-svg">
       </a>
       
 <!-- HAMBURGER POGA (mobile only) -->
